Fixes for things breaking; fine-tuning media queries
Code added to prevent more than one first project card clone and last project card clone;
Employer images for default (widescreen) layout fixed;
Fixes for content overflowing parents;
etc.

--- a/styles/media_queries/phones_landscape.css
+++ b/styles/media_queries/phones_landscape.css
@@ -117,6 +117,7 @@
         }
 
         & > main {
+            container-type: size;
             width: 100%;
         }
     }
@@ -195,7 +196,8 @@
         width: 100%;
         height: 100%;
         min-height: 100%;
-        padding: 0.5em;
+        padding: 0.25em 0.5em;
+        font-size: clamp(5cqh, 6cqh, 7cqh);
 
         & > header {
             display: flex;
@@ -204,7 +206,7 @@
             top: 0;
             z-index: 10;
             margin: 0 0;
-            font-size: clamp(1.25rem, 12cqh, 5rem);
+            font-size: clamp(1.25em, 2.25em, 2.5em);
             background: var(--french-vanilla-color);
             background: linear-gradient(to right, #a4c4b7 0%, #f2bc71 45%, #e26d5a 65%, #4ca1af 100%);
             -webkit-background-clip: text;
@@ -222,7 +224,7 @@
                 font-size: inherit !important;
                 font-family: revert;
                 font-variation-settings: "wght" 300;
-                line-height: clamp(1.75rem, 7cqh, 6.5rem);
+                line-height: 1.25;
             }
 
             & h2 {
@@ -266,22 +268,27 @@
                     grid-row: 1;
                     align-self: start;
                     width: revert;
-                    font-size: clamp(1.25em, 17cqh, 3.25em);
+                    font-size: clamp(1.25em, 2.5em, 3em);
+                    line-height: clamp(1.4em, 2.65em, 3.15em);
+                    line-height: clamp(1em, 1.25em, 1.5em);
                     text-align: center !important;
                 }
 
+                &#creativity h3 {
+                    font-weight: bold;
+                }
+
                 &#empathy h3 {
-                    font-size: clamp(1.5em, 2em, 2.5em);
+                    font-size: clamp(1.5em, 2.65em, 2.75em);
                 }
 
                 & p {
                     grid-row: 2;
                     grid-column: 1;
-                    align-self: center;
-                    margin-top: -0.25em;
+                    margin-top: 0.25em;
                     margin-bottom: 0;
-                    font-size: clamp(1em, 8cqh, 2em);
-                    line-height: clamp(1.25rem, 10.5cqh, 2.25rem);
+                    font-size: clamp(1em, 1.3em, 1.75em);
+                    line-height: clamp(1.15em, 1.4em, 1.9em);
                     text-align: left;
                     text-align-last: auto !important;
                 }
@@ -295,10 +302,6 @@
                     aspect-ratio: 1 / 1;
                     place-self: stretch center;
                 }
-            }
-
-            & #creativity h3 {
-                font-weight: bold;
             }
         }
     }
@@ -760,6 +763,7 @@
                     font-size: 1.85em;
 
                     & > ul {
+                        flex-wrap: nowrap;
                         justify-content: space-between;
                         position: relative;
 
