--- a/styles/media_queries/tablets_landscape.css
+++ b/styles/media_queries/tablets_landscape.css
@@ -1,5 +1,6 @@
 /* For tablets in landscape orientations */
-@media (min-width: 600px) and (max-width: 1280px) and (min-height: 600px) and (orientation: landscape) {
+/* @media (min-width: 600px) and (max-width: 1280px) and (min-height: 600px) and (orientation: landscape) { */
+@media (min-width: 901px) and (max-width: 1280px) and (orientation: landscape) {
     .debug #tablets-landscape {
         display: flex;
         background-color: orange;
@@ -32,7 +33,7 @@
         }
     }
 
-    @container projects (min-height: 650px) {
+    /* @container projects (min-height: 650px) {
         #projects > main > .project-card {
             flex-direction: column;
             justify-content: center;
@@ -94,7 +95,7 @@
                 transform: rotate(0deg);
             }
         }
-    }
+    } */
 
     #resume {
         & > header {
