--- a/styles/reset.css
+++ b/styles/reset.css
@@ -73,6 +73,7 @@ thead,
 tr,
 th,
 td,
+main,
 article,
 aside,
 canvas,
